# simple-xlsx-traversaler

./: Cargo.toml  README.md
examples/: check_top_100_rows.rs
src/: lib.rs  serde_struct.rs  utils.rs
src/serde_struct/: mod.rs  shared_string.rs  sheet_data.rs  styles.rs  workbook.rs  workbook_rels.rs
tests/: test.rs  test.xlsx
