[package]
name = "simple-xlsx-traversaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.27.1", features = ["serialize"] }